--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "php": ">=5.3",
         "silex/silex": "~1.1",
         "symfony/debug": "~2.3",
-        "silex/web-profiler": "1.0.*",
+        "silex/web-profiler": "dev-master",
         "symfony/monolog-bridge": "~2.3",
         "symfony/twig-bridge": "~2.3"
     },
